ingress-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    # Websocket 支持
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "pe-is"

    # CORS 配置
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"

    # 路径重写配置
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # 关键：添加 /health 路径规则，放在最前面
      - path: /health
        pathType: Prefix  # 必须用 Exact，不能用 ImplementationSpecific
        backend:
          service:
            name: health-svc  # 随便写个名字，不重要
            port:
              number: 80
      - path: /ws 
        pathType: Prefix
        backend:
          service:
            name: pe-is
            port:
              number: 8001
      - path: /register
        pathType: Prefix
        backend:
          service:
            name: us-is
            port:
              number: 8000
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: us-is
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gs-is
            port:
              number: 8002
